# Ros2PLAN_ws

./: .gitignore  .gitmodules  Dockerfile  README.md  dockerentry.sh  testpythonfile.py
src/action_simulator/: CMakeLists.txt  package.xml
src/action_simulator/external_validator/: PATH_0_mergedPLAN.txt  PATH_1_mergedPLAN.txt  PATH_2_mergedPLAN.txt  PATH_3_mergedPLAN.txt  PATH_4_mergedPLAN.txt  PATH_sync_0_a_mergedPLAN.txt  PATH_sync_3_1_mergedPLAN.txt  PATH_sync_3_4_mergedPLAN.txt  domain-optic.pddl  domain.pddl  failed_problem.pddl  problem_7r7s_iros.pddl  subp_base_to_site3_solving.pddl  subp_site3_to_site5_solving.pddl
src/action_simulator/include/action_simulator/: ExecutionManagerNode.hpp  STNControllerNode.hpp  action_simulator_node.hpp
src/action_simulator/launch/: action_simulator_launch.py
src/action_simulator/msg/: ActionExecutionInfo.msg
src/action_simulator/scripts/: Class_and_functions.py  failure_problem_creator.py
src/action_simulator/src/: action_simulator_node.cpp  action_simulator_node_exec.cpp  execution_manager_node.cpp  manager_node.cpp  team_lifecycle_manager_node.cpp  team_lifecycle_manager_node_threadstopworking.cpp
src/action_simulator/src/action_simulator/: ExecutionManagerNode.cpp  ExecutionManagerNode_lc.cpp  STNControllerNode.cpp
src/arms_plan_solver/: CMakeLists.txt  arms_plan_solver_plugin.xml  package.xml
src/arms_plan_solver/arms_utils/: Class_and_functions.py
src/arms_plan_solver/include/arms_plan_solver/: arms_plan_solver.hpp
src/arms_plan_solver/scripts/: CaFtestnewapproachARMS.py  Class_and_functions.py  MMdomainextended.pddl  domain.pddl  problem.pddl  problem3.pddl  problemtest.pddl  solve_problem.py  solve_problem_OV.py
src/arms_plan_solver/scripts/output/subproblems/: robot0robot1mergedPLAN.txt  robot2robot3mergedPLAN.txt  site1time_output.txt  site2problemPLAN.txt  site2returnproblemPLAN.txt  site2time_output.txt  site3mergedPLAN.txt  site3return.pddl  site3returnproblemPLAN.txt  site3time_output.txt  site4.pddl  site4return.pddl  site4returnproblemPLAN.txt  site4returntime_output.txt  site5mergedPLAN.txt  site5problemPLAN.txt  site5time_output.txt  site6.pddl  site6mergedPLAN.txt  site6return.pddl  site6time_output.txt
src/arms_plan_solver/scripts/output/subproblems/navigation/: navrobot0robot1site6basePLAN.txt  navrobot2robot3site1basePLAN.txt  navrobot2robot3site2site5.pddl  navrobot2robot3site2site5time_output.txt  navrobot2robot3site3site1.pddl  navrobot2robot3site3site1PLAN.txt  navrobot2robot3site5site3.pddl  navrobot2robot3site5site3PLAN.txt
src/arms_plan_solver/src/: arms_plan_solver.cpp
src/iros_plan_solver/: CMakeLists.txt  iros_plan_solver_plugin.xml  package.xml
src/iros_plan_solver/include/iros_plan_solver/: iros_plan_solver.hpp
src/iros_plan_solver/scripts/: Class_and_functions.py  TestProblem.pddl  create.py  datafile.py  solve_problem.py
src/iros_plan_solver/scripts/output/: mergedplan.txt
src/iros_plan_solver/scripts/output/subproblems/: site1.pddl  site1mergedPLAN.txt  site1problemPLAN.txt  site1return.pddl  site1returnproblemPLAN.txt  site1returntime_output.txt  site2.pddl  site2mergedPLAN.txt  site2return.pddl  site2returntime_output.txt  site3.pddl  site3problemPLAN.txt  site3returntime_output.txt  site4mergedPLAN.txt  site4problemPLAN.txt  site4time_output.txt  site5.pddl  site5return.pddl  site5returnproblemPLAN.txt  site5returntime_output.txt  site6problemPLAN.txt  site6returnproblemPLAN.txt  site6returntime_output.txt
src/iros_plan_solver/scripts/output/subproblems/navigation/: navrobot0robot1basesite4.pddl  navrobot0robot1basesite4PLAN.txt  navrobot0robot1basesite4time_output.txt  navrobot0robot1site4site6.pddl  (+12 more)
src/iros_plan_solver/src/: iros_plan_solver.cpp
src/my_examples/plansys2_testexample/: CMakeLists.txt  CMakeLists_ov.txt  README.md  package.xml
src/my_examples/plansys2_testexample/config/: initial_setup (copy).txt  initial_setup.txt  new_state.txt
src/my_examples/plansys2_testexample/include/plansys2_testexample/: change_site_action_node.hpp  landing_action_node.hpp  navigation_air_action_node.hpp  navigation_water_action_node.hpp  observe_2r_action_node.hpp  observe_action_node.hpp  sample_action_node.hpp  switch_airwater_action_node.hpp  switch_waterair_action_node.hpp  takeoff_action_node.hpp  team_lifecycle_manager.hpp  translate_data_action_node.hpp
src/my_examples/plansys2_testexample/launch/: cmdtest  commands  multiexecexample.py  plansys2_2r_simple_example_launch .py  plansys2_simple_example_launch.py  robot_launch.py  team_launch.py  testexample.py  testlaunch.py
src/my_examples/plansys2_testexample/pddl/: MMdomainextended.pddl  MMtest.pddl  failure_index.json  plan_file  problem.pddl  problem_hightest.pddl  problem_return.pddl  test_domain.pddl  test_problem.pddl  testproblem.pddl  testproblemcas1.pddl  world_info.json
src/my_examples/plansys2_testexample/src/: ask_charge_action_node.cpp  change_site_action_node.cpp  change_site_action_node_exec.cpp  charge_action_node.cpp  emn_bringup.cpp  landing_action_node.cpp  landing_action_node_exec.cpp  move_action_node.cpp  navigation_air_action_node.cpp  navigation_air_action_node_exec.cpp  navigation_water_action_node.cpp  navigation_water_action_node_exec.cpp  observe_2r_action_node.cpp  observe_2r_action_node_exec.cpp  observe_action_node.cpp  observe_action_node_exec.cpp  plansys2_core_bringup.cpp  sample_action_node.cpp  sample_action_node_exec.cpp  switch_airwater_action_node.cpp  switch_airwater_action_node_exec.cpp  switch_waterair_action_node.cpp  switch_waterair_action_node_exec.cpp  takeoff_action_node.cpp  takeoff_action_node_exec.cpp  team_lifecycle_manager_node.cpp  translate_data_action_node.cpp  translate_data_action_node_exec.cpp
src/optic_plan_solver/: CMakeLists.txt  optic_plan_solver_plugin.xml  package.xml
src/optic_plan_solver/include/optic_plan_solver/: optic_plan_solver.hpp
src/optic_plan_solver/src/: optic_plan_solver.cpp
src/user_visualization_interface/: CMakeLists.txt  package.xml
src/user_visualization_interface/src/: uservisualization_node.cpp
