<?xml version="1.0"?>
<package format="3">
  <name>action_simulator</name>
  <version>0.0.1</version>
  <description>Action simulator for plansys2</description>
  <maintainer email="virgile.dlr@protonmail.com">virgile</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dependency tags specify external dependencies of your package -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>plansys2_core</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>ament_index_cpp</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_popf_plan_solver</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>plansys2_executor</depend> <!-- Added -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

