<?xml version="1.0"?>
<package format="3">
  <name>arms_plan_solver</name>
  <version>0.0.1</version>
  
  <description>ARMS Plan Solver Plugin for PlanSys2</description>

  <maintainer email="virgile.dlr@protonmail.com">Virgile de La Rochefoucauld</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>plansys2_msgs</depend>
  <depend>pluginlib</depend>
  <depend>lifecycle_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>plansys2_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <plansys2_core plugin="${prefix}/arms_plan_solver_plugin.xml" />
  </export>
</package>

