<?xml version="1.0"?>
<package format="3">
  <name>user_visualization_interface</name>
  <version>0.0.0</version>
  <description>Plan visualization for multi-robot system</description>
  <maintainer email="virgile.dlr@protonmail.com">virgile</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>plansys2_msgs</depend>
  <depend>pkg-config</depend> <!-- Add pkg-config dependency -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

