<?xml version="1.0"?>
<package format="3">
  <name>plansys2_testexample</name>
  <version>0.0.4</version>

  <description>Example of launching test for trans-media and multi-drone coordination</description>

  <maintainer email="virgile.dlr@protonmail.com">Virgile de La Rochefoucauld</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>a

  <depend>rclcpp</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>action_simulator</depend>

  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>plansys2_terminal</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

